# fluent-bit

./: CMakeLists.txt  Dockerfile
.github/workflows/: fluent-bit-container-build.yaml  pixel-fluentbit-build.yaml
conf/: fluent-bit.conf  fluentbit.lua  in_dummy.conf  parsers.conf
dockerfiles/: Dockerfile.x86_64-master
lib/mbedtls-2.16.5/: Makefile
plugins/: CMakeLists.txt
plugins/filter_geoip_lookup/: CMakeLists.txt  filter_geoip_lookup.c  filter_geoip_lookup.h
plugins/in_zmq/: CMakeLists.txt  in_zmq.c  in_zmq.h
tests/runtime/: CMakeLists.txt  filter_geoip.c
